practica-kubernetes/practica-metabase/03-mb.yaml
#T* Deployment Metabase
apiVersion: apps/v1
kind: Deployment

metadata:
  name: metabase
  labels:
    app: metabase

spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase

  template:
    metadata:
      labels:
        app: metabase

    spec:
      containers:
      - name: metabase
        image: metabase/metabase:v0.48.6

        ports:
        - containerPort: 3000
---
#T* Service Metabase
apiVersion: v1
kind: Service
metadata:
  name: metabase
  labels:
    app: metabase
  
spec:
  selector:
    app: metabase
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000

---
#T* Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  name: web
spec:
  rules:
  - host: guarnier-mb.my.kube.um.edu.ar
    http:
      paths:
      - backend:
          service:
            name: metabase
            port:
              number: 3000
        path: /
        pathType: Prefix
